Corrects alignment issues with the embeded videos

--- a/app/components/video-embed/styles.scss
+++ b/app/components/video-embed/styles.scss
@@ -1,5 +1,7 @@
 & {
+  background: rgb(0,0,0);
   iframe {
     height: 540px !important;
+    width: 100%;
   }
 }
